--- a/clothing-store/src/styles/styles.scss
+++ b/clothing-store/src/styles/styles.scss
@@ -3,3 +3,5 @@
 @import url("./navigation.css");
 @import url("./home.css");
 @import url("./loader.css");
+@import url("./slider.css");
+@import url("./hamburgerIcon.css");
