--- a/clothing-store/src/styles/home.scss
+++ b/clothing-store/src/styles/home.scss
@@ -1,5 +1,5 @@
 /* Website Content */
-
+@import "./slider.scss";
 .home {
   height: 100vh;
   width: 100vw;
@@ -32,4 +32,21 @@
 .selectCloth {
   position: absolute;
   color: black;
+}
+// slider adjustments
+.slider {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.sliderImage {
+  width: 20rem;
+  height: 20rem;
+}
+@media (max-width: 768) {
+  .sliderImage {
+    width: 20rem;
+    height: 20rem;
+  }
 }
