--- a/clothing-store/src/styles/navigation.scss
+++ b/clothing-store/src/styles/navigation.scss
@@ -1,5 +1,6 @@
 @import "./_variables";
 @import "./hamburgerIcon.scss";
+@import "./blob.scss";
 
 * {
   margin: 0;
@@ -105,7 +106,7 @@ body {
   width: 50rem;
   height: 5rem;
   background-color: black;
-  clip-path: polygon(0 15%, 100% 15%, 75% 100%, 25% 100%);
+  clip-path: polygon(0 15%, 100% 15%, 75% 90%, 25% 90%);
   margin: 5rem auto;
   display: flex;
   align-items: center;
