navbar done for mobile

--- a/clothing-store/src/styles/__variables.scss
+++ b/clothing-store/src/styles/__variables.scss
@@ -1,2 +1,4 @@
 $primary-background-color: radial-gradient(circle, #0d0d0d 0%, #000000 100%);
 $a-color: #52b23c;
+$light: #ffffff;
+$dark: #000000;
