--- a/clothing-store/src/styles/blob.scss
+++ b/clothing-store/src/styles/blob.scss
@@ -1,3 +1,4 @@
+@import "./_variables";
 *,
 *:before,
 *:after {
@@ -10,15 +11,18 @@
   border-radius: 30px;
 }
 
-$light: #ffffff;
-$dark: #000000;
 $borderW: 2px;
 
 .blob-btn {
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  letter-spacing: 0.1rem;
   $numOfBlobs: 4;
   z-index: 1;
   position: relative;
-  padding: 1rem 2rem;
+  padding: 0.8rem 1.6rem;
   margin-bottom: 1rem;
   text-align: center;
   text-transform: uppercase;
@@ -79,6 +83,9 @@ $borderW: 2px;
     height: 100%;
     border-radius: 30px;
     background: #ffffff;
+    &.act {
+      background: #000000;
+    }
   }
 
   // additional container created, because in FF blobs are breaking overflow:hidden of element with svg gooey filter
