--- a/clothing-store/src/styles/home.scss
+++ b/clothing-store/src/styles/home.scss
@@ -3,6 +3,8 @@
 .home {
   height: 100vh;
   width: 100vw;
+  max-width: 100vw;
+  max-height: 100vh;
   overflow: hidden;
 }
 .website-content {
@@ -44,9 +46,60 @@
   width: 20rem;
   height: 20rem;
 }
-@media (max-width: 768) {
+.homeSliderContainer {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pointed-boxLeft {
+  width: 5rem;
+  height: 20rem;
+  background-color: black;
+  clip-path: polygon(15% 0, 15% 100%, 90% 75%, 90% 25%);
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.pointed-boxRight {
+  width: 5rem;
+  height: 20rem;
+  background-color: black;
+  clip-path: polygon(85% 0, 85% 100%, 10% 75%, 10% 25%);
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 768px) {
   .sliderImage {
-    width: 20rem;
-    height: 20rem;
+    width: 5rem;
+    height: 5rem;
+  }
+  .pointed-boxLeft,
+  .pointed-boxRight {
+    max-width: 2rem;
+    max-height: 20rem;
   }
 }
