--- a/clothing-store/src/styles/slider.scss
+++ b/clothing-store/src/styles/slider.scss
@@ -24,7 +24,7 @@
 
 /* Navigation buttons */
 button {
-  position: absolute;
+  position: fixed;
   top: 50%;
   transform: translateY(-50%);
   background: rgba(0, 0, 0, 0.5);
@@ -37,11 +37,11 @@ button {
 }
 
 .prev {
-  left: 20px;
+  left: 1rem;
 }
 
 .next {
-  right: 20px;
+  right: 1rem;
 }
 
 button:hover {
