--- a/clothing-store/src/styles/slider.scss
+++ b/clothing-store/src/styles/slider.scss
@@ -8,11 +8,14 @@
 
 .slider {
   position: relative;
+  height: 23rem;
 }
 
 .slides {
   display: flex;
   transition: transform 0.5s ease-in-out;
+  width: 100%;
+  height: 100%;
 }
 
 .slide {
@@ -46,6 +49,12 @@ button {
 
 button:hover {
   background: rgba(0, 0, 0, 0.7);
+}
+.canvas {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  display: block;
 }
 @media (max-width: 768px) {
   .sliderImage {
