--- a/clothing-store/src/styles/slider.scss
+++ b/clothing-store/src/styles/slider.scss
@@ -12,15 +12,17 @@
 }
 
 .slides {
+  margin-top: 1rem;
   display: flex;
   transition: transform 0.5s ease-in-out;
-  width: 100%;
+  width: 50%;
   height: 100%;
 }
 
 .slide {
-  min-width: 100%;
-  height: 400px;
+  margin-top: 1rem;
+  min-width: 50%;
+  height: 100%;
   background-size: cover;
   background-position: center;
 }
