--- a/clothing-store/src/styles/slider.scss
+++ b/clothing-store/src/styles/slider.scss
@@ -9,6 +9,7 @@
 .slider {
   position: relative;
   height: 23rem;
+  z-index: 1000;
 }
 
 .slides {
@@ -17,6 +18,7 @@
   transition: transform 0.5s ease-in-out;
   width: 50%;
   height: 100%;
+  z-index: 1000;
 }
 
 .slide {
@@ -25,6 +27,7 @@
   height: 100%;
   background-size: cover;
   background-position: center;
+  z-index: 1000;
 }
 
 /* Navigation buttons */
@@ -43,10 +46,12 @@ button {
 
 .prev {
   left: 1rem;
+  z-index: 1000;
 }
 
 .next {
   right: 1rem;
+  z-index: 1000;
 }
 
 button:hover {
