--- a/clothing-store/src/styles/slider.scss
+++ b/clothing-store/src/styles/slider.scss
@@ -25,7 +25,16 @@
   justify-content: center;
   align-items: center;
 }
-
+.wrappingCanvas {
+  margin-top: 1rem;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 50%;
+  height: 100%;
+  z-index: 1000;
+  justify-content: center;
+  align-items: center;
+}
 .slide {
   margin-top: 1rem;
   min-width: 50%;
