--- a/clothing-store/src/styles/home.scss
+++ b/clothing-store/src/styles/home.scss
@@ -55,7 +55,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  margin-top: -100px;
+  height: 30%;
   z-index: 1;
 }
 
