--- a/clothing-store/src/styles/slider.scss
+++ b/clothing-store/src/styles/slider.scss
@@ -4,48 +4,35 @@
   margin: 0 auto;
   overflow: hidden;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .slider {
   position: relative;
   height: 23rem;
+  width: 80%;
   z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.slides {
-  margin-top: 1rem;
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-  width: 50%;
-  height: 100%;
-  z-index: 1000;
-  justify-content: center;
-  align-items: center;
-}
-.wrappingCanvas {
-  margin-top: 1rem;
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-  width: 50%;
-  height: 100%;
-  z-index: 1000;
-  justify-content: center;
-  align-items: center;
-}
-.slide {
-  margin-top: 1rem;
-  min-width: 50%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  z-index: 1000;
-}
+// .wrappingCanvas {
+//   margin-top: 1rem;
+//   display: flex;
+//   transition: transform 0.5s ease-in-out;
+//   width: 50%;
+//   height: 100%;
+//   z-index: 1000;
+//   justify-content: center;
+//   align-items: center;
+// }
+
 .currentSlide {
   display: flex;
-  min-width: 25rem;
+  min-width: 70rem;
   height: 25rem;
 }
 .prevSlide {
