--- a/clothing-store/src/styles/user.scss
+++ b/clothing-store/src/styles/user.scss
@@ -7,6 +7,18 @@
   justify-content: center;
   margin: 0;
   padding: 0;
+  background-color: #f0f0f0;
+}
+.registerForm {
+  width: 100vw;
+  height: 120vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
 }
 .formWrapper {
   width: 20rem;
@@ -67,6 +79,16 @@
   left: 1rem;
   background: #f0f0f0;
   width: 5.2rem;
+  padding-left: 0.5rem;
+  padding-right: 1rem;
+  color: #0a7fec;
+}
+.styledRepassword {
+  position: relative;
+  top: 0.7rem;
+  left: 1rem;
+  background: #f0f0f0;
+  width: 6.2rem;
   padding-left: 0.5rem;
   padding-right: 1rem;
   color: #0a7fec;
