--- a/clothing-store/src/stylesCSS/styles.css
+++ b/clothing-store/src/stylesCSS/styles.css
@@ -7,4 +7,5 @@
 @import url("./hamburgerIcon.css");
 @import url("./blob.css");
 @import url("./overlay.css");
-@import url("./user.css");/*# sourceMappingURL=styles.css.map */
+@import url("./user.css");
+@import url("./quanda.css");/*# sourceMappingURL=styles.css.map */
