about page created

--- a/clothing-store/src/stylesCSS/styles.css
+++ b/clothing-store/src/stylesCSS/styles.css
@@ -8,4 +8,5 @@
 @import url("./blob.css");
 @import url("./overlay.css");
 @import url("./user.css");
-@import url("./quanda.css");/*# sourceMappingURL=styles.css.map */
+@import url("./quanda.css");
+@import url("./about.css");/*# sourceMappingURL=styles.css.map */
