--- a/clothing-store/src/styles/about.scss
+++ b/clothing-store/src/styles/about.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   h1,
   p {
     margin-bottom: 1rem;
@@ -12,5 +13,13 @@
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
+    z-index: 1;
   }
+}
+.aboutImage {
+  position: absolute;
+  bottom: 20rem;
+  z-index: 0;
+  width: 40vw;
+  height: 40vh;
 }
