--- a/clothing-store/src/stylesCSS/about.css
+++ b/clothing-store/src/stylesCSS/about.css
@@ -22,4 +22,18 @@
   z-index: 0;
   width: 40vw;
   height: 40vh;
+}
+
+.aboutLeft,
+.aboutRight {
+  width: 40%;
+  z-index: 2;
+}
+
+.aboutContent {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 80%;
+  margin-top: 2rem;
 }/*# sourceMappingURL=about.css.map */
